# vtr-verilog-to-routing

./: CMakeLists.txt  README.md
libs/: CMakeLists.txt
libs/libarchfpga/src/: physical_types.h  read_xml_arch_file.cpp
libs/libhlc/: CMakeLists.txt
vpr/: CMakeLists.txt
vpr/src/base/: SetupVPR.cpp  read_options.cpp  vpr_api.cpp  vpr_context.h  vpr_types.h
vpr/src/draw/: intra_logic_block.cpp
vpr/src/pack/: cluster_router.cpp
vpr/src/route/: check_route.cpp  route_common.cpp  route_timing.cpp  route_timing.h  rr_graph.cpp  rr_graph_indexed_data.cpp  rr_graph_uxsdcxx_serializer.h  rr_node.h
vpr/src/timing/: timing_util.cpp
vpr/src/util/: histogram.cpp  ice40_hlc.cpp
vtr_flow/tasks/regression_tests/vtr_reg_basic/basic_timing/config/: golden_results.txt
vtr_flow/tasks/regression_tests/vtr_reg_strong/strong_cin_tie_off/config/: golden_results.txt
vtr_flow/tasks/regression_tests/vtr_reg_strong/strong_fix_pins_pad_file/config/: golden_results.txt
vtr_flow/tasks/regression_tests/vtr_reg_strong/strong_place_delay_model/config/: golden_results.txt
vtr_flow/tasks/regression_tests/vtr_reg_strong/strong_power/config/: golden_results.txt
vtr_flow/tasks/regression_tests/vtr_reg_strong/strong_soft_multipliers/config/: golden_results.txt
